--- a/02-JavaScriptAvanzado-I/debugging/demo/index.html
+++ b/02-JavaScriptAvanzado-I/debugging/demo/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <script>
-
+       
         var obj = {
             fullname: 'Natalia Nerea',
             prop: {
@@ -26,8 +26,8 @@
                 console.log(test)
             }
         }
-
-        var saludarHola = saludar('Hola', obj); 
+         
+         var saludarHola = saludar('Hola', obj); 
 
         saludarHola('Toni', test); 
 
@@ -40,7 +40,8 @@
         console.table(["apples", "oranges", "bananas"]);
         //con un objeto la columna index contendra el nombre de la propiedad
         // y values el valor de dicha propiedad
-        let obj={
+        //let
+        obj={
             firstName: "Daniel",
             lastName: "Maers"
         }
